--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-app-auth": "^5.1.2",
     "react-native-gifted-chat": "^0.16.1"
   },
   "devDependencies": {
