--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-app-auth": "^5.1.2",
-    "react-native-gifted-chat": "^0.16.1"
+    "react-native-elements": "^2.0.0",
+    "react-native-gifted-chat": "^0.16.1",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
     "@babel/core": "7.9.6",
